# biometric-ai-platform

./: .gitignore  CHANGELOG.md  INTERVIEW_DEFENSE.md  README.md  biometric-coach.skill  kb-base.md  manage_tools.sh  plan.json  telemetry-optimization-plan.md
.gemini/: settings.json  settings.json.example
.gemini/agents/: biometric-coach.md
.gemini/skills/biometric-coach/: SKILL.md
.github/workflows/: ci.yml
ai-infra/: architecture-plan.md  roadmap.md
api/: README.md  main.py  pyproject.toml  temp_get_biometrics.py  temp_update_zones.py
api/scripts/: backfill_telemetry.py  evaluate_agent.py  finops_report.py  init_finops_bq.py  init_profile_tables.py  manage_tools.py  migrate_telemetry.py  upload_knowledge.py
api/src/agent/: graph.py
api/src/routers/: tools.py
api/src/tools/: __init__.py  analytics.py  etl_job.py  etl_tool.py  garmin_uploader.py  profile_manager.py  research_assistant.py  retriever.py
api/src/utils/: config.py  finops.py  garmin_auth.py  provider_factory.py
api/tests/: eval_dataset.json  test_agent_sdk.py  test_api_tools.py  test_finops_integration.py  test_provider_interface.py  test_vector_rag.py
docs/: architecture-plan.md  developer-guide.md  external-agent-api-guide.md  getting-started.md  goal.md  roadmap.md
docs/plans/: universal-goals.md
infrastructure/: cost-management.tf  main.tf  tfplan  variables.tf
infrastructure/environments/dev/: main.tf  variables.tf
infrastructure/envs/: dev.tfvars  terraform.tfvars.example
infrastructure/modules/iam/: main.tf  outputs.tf  variables.tf
infrastructure/modules/storage/: main.tf  outputs.tf  variables.tf
knowledge_base/: guide_to_what_influences_staying_asleep_through_the_night.md  running_training_theory.md
legacy_logic/: biometric-coach-agent.md.bak
skills/biometric-coach/: SKILL.md
